--- a/src/css/themes/_florid.scss
+++ b/src/css/themes/_florid.scss
@@ -114,8 +114,7 @@ body.florid {
 	.lilypad > object,
 	#tour-accomplishments > img,
 	img.badge,
-	.tally > img,
-	#hopper img {
+	.tally > img {
 		filter: brightness(0.001);
 	}
 
